--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.7.0",
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.14.0",
