--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android --port 8097",
+    "android": "react-native run-android",
+    "androidport": "react-native run-android --port 8097",
     "ios": "react-native run-ios",
     "format": "prettier --write \"**/*.{ts,tsx,js,json,md}\"",
     "start": "react-native start",
@@ -11,10 +12,12 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@apollo/client": "^3.0.0-beta.44",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/material-top-tabs": "^5.1.15",
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
+    "graphql": "^15.0.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
