--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react-native": "^0.62.0",
     "@types/react-test-renderer": "16.9.2",
     "@types/styled-components": "^5.1.0",
+    "@types/uuid": "^7.0.3",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "babel-jest": "^24.9.0",
