--- a/ios/Podfile
+++ b/ios/Podfile
@@ -78,6 +78,8 @@ target 'orchestra' do
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
 
+  pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
+
   target 'orchestraTests' do
     inherit! :complete
     # Pods for testing
