Fixed text stylings and installed Penna

--- a/ios/orchestra/Info.plist
+++ b/ios/orchestra/Info.plist
@@ -73,6 +73,8 @@
 		<string>Montserrat-SemiBoldItalic.ttf</string>
 		<string>Montserrat-Thin.ttf</string>
 		<string>Montserrat-ThinItalic.ttf</string>
+		<string>penna.otf</string>
+		<string>Penna.otf</string>
 	</array>
 </dict>
 </plist>
