--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@apollo/client": "^3.0.0-beta.44",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-mapbox-gl/maps": "^8.1.0-beta.1",
     "@react-navigation/material-top-tabs": "^5.1.15",
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
